[gd_scene load_steps=11 format=2]

[ext_resource path="res://grafica/Shopping/Shoping_BG.jpg" type="Texture" id=1]
[ext_resource path="res://grafica/Shopping/placeLaigth.png" type="Texture" id=2]
[ext_resource path="res://grafica/Shopping/BTN_buy_UP.png" type="Texture" id=3]
[ext_resource path="res://grafica/Shopping/BTN_buy_DOWN.png" type="Texture" id=4]
[ext_resource path="res://grafica/Shopping/BTN_voltar.png" type="Texture" id=5]
[ext_resource path="res://script/Shoping.gd" type="Script" id=6]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/Corbel Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/Corbel Bold.ttf"

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
font_data = SubResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 21.0, 76.0, 291.0, 474.0 ],
"_edit_vertical_guides_": [ 300.0, 166.0, -257.0 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.05
anchor_top = 0.097
anchor_right = 0.946
anchor_bottom = 0.171
margin_top = -0.160004
margin_right = -0.120056
margin_bottom = 0.119995
texture = ExtResource( 2 )
expand = true

[node name="BtnVoltar" type="Control" parent="."]
anchor_top = 0.02
anchor_right = 0.182
anchor_bottom = 0.074
margin_top = 0.519999
margin_right = -0.200005
margin_bottom = 0.223999

[node name="Voltar" type="TouchScreenButton" parent="BtnVoltar"]
position = Vector2( -1, -1 )
normal = ExtResource( 5 )

[node name="BtnBuy" type="Control" parent="."]
anchor_left = 0.4
anchor_top = 0.908
anchor_right = 0.602
anchor_bottom = 0.967
margin_top = 0.207947
margin_right = -0.200043
margin_bottom = -0.208069
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="TouchScreenButton" parent="BtnBuy"]
position = Vector2( 0, 1 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="SeuGanho" type="Label" parent="."]
anchor_left = 0.785
anchor_top = 0.028
anchor_right = 0.953
anchor_bottom = 0.069
margin_left = -6.10352e-05
margin_top = 11.328
margin_right = 0.199951
margin_bottom = 11.344
custom_fonts/font = SubResource( 4 )
text = "99999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerGun" type="Label" parent="."]
anchor_left = 0.213
anchor_top = 0.818
anchor_right = 0.382
anchor_bottom = 0.859
margin_left = 0.199989
margin_top = -0.632019
margin_right = -6.20001
margin_bottom = -0.616028
custom_fonts/font = SubResource( 4 )
text = "99999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LiveMax" type="Label" parent="."]
anchor_left = 0.453
anchor_top = 0.817
anchor_right = 0.613
anchor_bottom = 0.859
margin_left = 0.199982
margin_top = 0.391968
margin_right = 0.199982
margin_bottom = -0.616028
custom_fonts/font = SubResource( 4 )
text = "99999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavSkipp" type="Label" parent="."]
anchor_left = 0.693
anchor_top = 0.817
anchor_right = 0.852
anchor_bottom = 0.859
margin_left = 0.199982
margin_top = 0.391968
margin_right = -0.200043
margin_bottom = -0.616028
custom_fonts/font = SubResource( 4 )
text = "99999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Custo" type="Label" parent="."]
anchor_left = 0.393
anchor_top = 0.105
anchor_right = 0.608
anchor_bottom = 0.162
margin_left = 0.199997
margin_top = 0.479988
margin_right = 0.199951
margin_bottom = 0.112
custom_fonts/font = SubResource( 1 )
text = "99999"
align = 1

[connection signal="released" from="BtnVoltar/Voltar" to="." method="_on_Voltar_released"]
[connection signal="pressed" from="BtnBuy/Buy" to="." method="_on_Buy_pressed"]
